--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #wrapper {
   width: 600px;
-  background: #ccc;
+  background: rgb(239, 247, 166);
   margin: 50px auto;
   display: grid;
   grid-template: repeat(4, 100px) / repeat(5, 100px);
@@ -11,4 +11,15 @@
 .game-card {
   height: 100px;
   background: rgb(115, 115, 224);
+  color: #fff;
+  font-size: 50px;
+  text-decoration: none;
+  line-height: 100px;
+  text-align: center;
+}
+.game-card.true-pair {
+  background: rgb(72, 189, 154);
+}
+.game-card.false-pair {
+  background: rgb(245, 104, 49);
 }
